...
    }
    
    private func setupNavigation() {
        self.view.backgroundColor = .wmg_lightGrey
        self.navigationController?.navigationBar.tintColor = UIColor.black
        let plusButton = UIBarButtonItem(barButtonSystemItem: .add, target: self, action: #selector(add))
        plusButton.accessibilityIdentifier = "newGradeOrTaskPlusButton"
        self.navigationItem.rightBarButtonItem = plusButton
        self.navigationItem.rightBarButtonItem?.tintColor = UIColor.black
    }
    
    private func setupLayout() {
        // Views
...
        sv.spacing = 10
        sv.translatesAutoresizingMaskIntoConstraints = false
        return sv
    }()
    
    private lazy var segmentedControl: UISegmentedControl = {
        let items = ["Grades", "Tasks"]
        let sc = UISegmentedControl(items: items)
        sc.selectedSegmentIndex = 0
        sc.tintColor = .wmg_darkGrey
        sc.addTarget(self, action: #selector(segmentSwap(_:)), for: .valueChanged)
        sc.translatesAutoresizingMaskIntoConstraints = false
        return sc
...
