//
//  NavigationSmokeTest.swift
//  WatsMyGradeUITests
//
//  Created by Manthan Shah on 2018-04-24.
//  Copyright © 2018 Manthan Shah. All rights reserved.
//

import XCTest

class NavigationSmokeTest: XCTestCase {
    
    var app = XCUIApplication()
    
    override func setUp() {
        super.setUp()
        
        // Put setup code here. This method is called before the invocation of each test method in the class.
        
        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false
        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        XCUIApplication().launch()
        
        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }
    
    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
        super.tearDown()
    }
    
    func testTapThroughViews() {
        
        app.navigationBars.buttons["newCoursePlusButton"].tap()
        app.navigationBars.buttons["Courses"].tap()
        
        app.tables.cells.element(boundBy: 0).tap()
        
        app.navigationBars.buttons["newGradeOrTaskPlusButton"].tap()
        app.navigationBars.buttons["BME 121"].tap()
        
        app.tables.cells.element(boundBy: 0).tap()
        app.navigationBars.buttons["BME 121"].tap()
        
        app.segmentedControls.buttons["Tasks"].tap()
        app.navigationBars.buttons["newGradeOrTaskPlusButton"].tap()
        app.navigationBars.buttons["BME 121"].tap()
        
        app.tables.cells.element(boundBy: 0).tap()
        app.navigationBars.buttons["BME 121"].tap()
    }
    
}
